tests/compile-fail/multiple_starting_state.stderr
error: orthogonal regions overlap at state `State2`
 --> tests/compile-fail/multiple_starting_state.rs:9:10
  |
9 |         *State2 + Event2 = State3,
  |          ^^^^^^
